exercise card > display flex

--- a/src/global.scss
+++ b/src/global.scss
@@ -31,9 +31,11 @@ ion-menu-button {
 
 .exercise-card {
     footer {
-        text-align: right;
-        padding: .2em 1em;
-        font-size: 2em;
+        padding: 1em;
+        font-size: 1.5em;
+        display: flex;
+        grid-gap: 1em;
+        justify-content: space-between;
     }
 }
 
