menu selected item border radius 0 1 1 0

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -117,5 +117,5 @@ ion-note {
 
 ion-item.selected {
   background: var(--color-custom-highlight);
-  border-radius: 1em;
+  border-radius: 0 1em 1em 0;
 }
