--- a/src/app/views/favorites/favorites.page.html
+++ b/src/app/views/favorites/favorites.page.html
@@ -14,4 +14,62 @@
     </ion-toolbar>
   </ion-header>
 
+  <ion-list>
+    <ion-card *ngFor="let workout of workouts" class="exercise-card">
+      <ion-card-header>
+        <ion-card-title>{{workout.name}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-card-subtitle>Exercises: </ion-card-subtitle>
+        <h1 *ngFor="let exercise of workout.exercises">
+          {{exercise.name}} 
+          | {{exercise.sets}} x {{exercise.reps}}
+          | <strong>{{exercise.starting}} kg</strong>
+        </h1>
+      </ion-card-content>
+
+      <aside>
+        <small *ngIf="workout.created_at">{{workout.created_at}}</small>
+      </aside>
+
+      <footer>        
+        <ion-fab horizontal="end" vertical="top" slot="fixed">
+          <ion-fab-button color="dark">
+            <ion-icon md="caret-forward" ios="chevron-forward-circle-outline"></ion-icon>
+          </ion-fab-button>
+          <ion-fab-list side="bottom">
+            <ion-fab-button color="light" (click)="presentModal(workout, 'play')">
+              <ion-icon name="play-outline"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button color="light" (click)="presentModal(workout, 'view')">
+              <ion-icon name="eye-outline"></ion-icon>
+            </ion-fab-button>
+            <ion-fab-button color="light" (click)="presentModal(workout, 'edit')">
+              <ion-icon name="create-outline"></ion-icon>
+            </ion-fab-button>
+          </ion-fab-list>
+        </ion-fab>
+
+        <ion-button color="danger" (click)="addToFavorites(workout)">
+          <ion-icon name="heart-outline" *ngIf="workout.status == 'unliked'"></ion-icon>
+          <ion-icon name="heart" *ngIf="workout.status == 'liked'"></ion-icon>
+        </ion-button>
+
+        <ion-button fill="outline" color="medium" (click)="addToArchived(workout)">
+          <ion-icon name="archive-outline"></ion-icon>
+        </ion-button>
+
+        <ion-button color="dark" (click)="addToTrash(workout)">
+          <ion-icon name="trash-outline"></ion-icon>
+        </ion-button>
+      </footer>
+    </ion-card>
+
+    <ion-card *ngIf="workouts.length == 0" class="intro-card">
+      <ion-card-header>
+        <h1>No records</h1>
+      </ion-card-header>
+    </ion-card>
+  </ion-list>  
+
 </ion-content>
