--- a/src/app/views/history/history.page.html
+++ b/src/app/views/history/history.page.html
@@ -41,7 +41,7 @@
       </ion-card-header>
       
       <ion-card-content>
-        <ion-button class="newWorkoutBtn" expand="block" color="danger" routerDirection="root" routerLink="/workouts">
+        <ion-button class="newWorkoutBtn" expand="block" color="danger" routerDirection="root" routerLink="/">
           Do some training
         </ion-button>
       </ion-card-content>
