--- a/src/app/views/home/home.page.html
+++ b/src/app/views/home/home.page.html
@@ -3,15 +3,20 @@
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
-    <ion-title>Hello</ion-title>
+    <ion-title>Home</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Hello</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title><q>{{selectedQuote.text}}</q></ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      {{selectedQuote.author}}
+    </ion-card-content>
+  </ion-card>
 
 </ion-content>
