--- a/src/app/views/favorites/favorites.page.html
+++ b/src/app/views/favorites/favorites.page.html
@@ -10,12 +10,12 @@
 <ion-content>
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Favorites</ion-title>
+      <ion-title size="large" [@scaleIn]>Favorites</ion-title>
     </ion-toolbar>
   </ion-header>
 
   <ion-list>
-    <ion-card *ngFor="let workout of workouts" class="exercise-card">
+    <ion-card *ngFor="let workout of workouts" class="exercise-card" [@scaleIn]>
       <ion-card-header>
         <ion-card-title>{{workout.name}}</ion-card-title>
       </ion-card-header>
@@ -66,7 +66,7 @@
       </footer>
     </ion-card>
 
-    <ion-card *ngIf="workouts.length == 0" class="intro-card">
+    <ion-card *ngIf="workouts.length == 0" class="intro-card" [@scaleIn]>
       <ion-card-header>
         <h1>No records</h1>
       </ion-card-header>
