--- a/src/app/views/home/home.page.html
+++ b/src/app/views/home/home.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
   
-  <ion-card>
+  <ion-card [@scaleIn]>
     <ion-card-header>
       <ion-card-title><q>{{selectedQuote.text}}</q></ion-card-title>
     </ion-card-header>
