--- a/src/app/views/not-found/not-found.page.html
+++ b/src/app/views/not-found/not-found.page.html
@@ -7,6 +7,15 @@
 </ion-header>
 
 <ion-content>
-  Bro, seems like you are lost!
-  <ion-button color="danger" routerDirection="root" routerLink="/">Head back home</ion-button>
+  <ion-card>
+    <ion-card-header>
+      <ion-card-title>Bro, seems like you are lost!</ion-card-title>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <ion-button color="danger" routerDirection="root" routerLink="/">
+        Head back home
+      </ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
